Update 16th May

--- a/3d-cad-services/index.html
+++ b/3d-cad-services/index.html
@@ -41,6 +41,7 @@
             </a>
             <div class="navbar-nav ml-auto py-0">
                 <a href="/" class="nav-item nav-link active">Home</a>
+                <a href="#service" class="nav-item nav-link">Features</a>
                 <a href="#contact" class="nav-item nav-link">Contact</a>
             </div>
         </div>
@@ -53,12 +54,12 @@
         <div id="header-carousel" class="carousel slide carousel-fade" data-ride="carousel">
             <div class="carousel-inner">
                 <div class="carousel-item position-relative active" style="height: 100vh; min-height: 400px;">
-                    <video class="position-absolute w-100 h-100" autoplay loop muted>
+                    <video class="position-absolute w-100 h-100" autoplay loop muted playsinline>
                         <source src="../video/3d-services.mp4" type="video/mp4">
                     </video>
                     <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
                         <div class="p-3" style="max-width: 1200px;">
-                            <h4 class="text-white text-uppercase mb-4" style="letter-spacing: 3px;">3D Services<h4>
+                            <h4 class="text-white text-uppercase mb-4" style="letter-spacing: 2px;">3D Services<h4>
                             <h3 class="display-3 font-secondary text-white mb-4">Experience Your Vision<br>From Design to Reality</h3>
                             <a class="btn btn-light font-weight-bold py-3 px-5 mt-2 btn-scroll" href="#contact">Get A Quote</a>
                         </div>
@@ -75,16 +76,20 @@
         <div class="container py-5">
             <div class="row align-items-center">
                 <div class="col-lg-7">
-                    <video class="content-video w-100 h-100" autoplay loop muted>
+                    <video class="content-video w-100 h-100" autoplay loop muted playsinline>
                         <source src="../video/Interior.mp4" type="video/mp4">
                     </video>
                 </div>
                 <div class="col-lg-5">
-                    <h5 class="text-uppercase text-primary mb-3" style="letter-spacing: 3px;">Interior Design Rendering</h5>
+                    <h3 class="text-uppercase text-primary mb-3" style="letter-spacing: 2px;">Interior Design Rendering</h3>
                     <h1 class="display-4 mb-3">Transforming <span class="text-primary">Spaces</span> Elevating <span class="text-primary">Lives</span> </h1>
-                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+                    <p>What does your ideal space truly feel like? At Tech Triq, we believe that the answers lie within you.
                     <br>
-                    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
+                    <br>
+                    We specialize in unlocking that potential and translating it into breathtaking interior design renderings. We don’t simply show you rooms; we provoke a sense of possibility. Our process begins with a deep conversation to understand your aspirations, your needs, and your unique style. Then, our skilled designers utilize cutting-edge rendering technology to bring your vision to life, revealing every nuance of texture, color, and light. We challenge conventional design norms, always seeking to create spaces that are not just aesthetically pleasing, but deeply engaging and emotionally resonant. 
+                    <br>
+                    <br>
+                    Are you seeking a space that fosters creativity, promotes serenity, or strengthens connections?  Let us help you realize your dream one stunning rendering at a time
                     </p>
                 </div>
             </div>
@@ -95,15 +100,19 @@
         <div class="container py-5">
             <div class="row align-items-center">
                 <div class="col-lg-5">
-                    <h5 class="text-uppercase text-primary mb-3" style="letter-spacing: 3px;">Exterior Design Rendering</h5>
+                    <h3 class="text-uppercase text-primary mb-3" style="letter-spacing: 2px;">Exterior Design Rendering</h3>
                     <h1 class="display-4 mb-3">Designing the <span class="text-primary">Dream</span><br>From the <span class="text-primary">Outside In</span></h1>
-                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+                    <p>The foundation of a remarkable home begins with a meticulously crafted exterior. Our exterior design renderings provide a comprehensive visual representation of your future property.
                     <br>
-                    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
+                    <br>
+                    We utilize advanced 3D modeling techniques to precisely portray the building’s form, materials, and integration with its environment. Our process involves a thorough assessment of site conditions, local regulations, and your specific design preferences. We meticulously detail everything from rooflines and window placements to hardscaping, landscaping, and exterior lighting.
+                    <br>
+                    <br>
+                    This level of precision ensures that the final result aligns perfectly with your vision – minimizing costly revisions and maximizing the overall quality of your design.
                     </p>
                 </div>
                 <div class="col-lg-7">
-                    <video class="content-video w-100 h-100" autoplay loop muted>
+                    <video class="content-video w-100 h-100" autoplay loop muted playsinline>
                         <source src="../video/Exterior.mp4" type="video/mp4">
                     </video>
                 </div>
@@ -115,16 +124,20 @@
         <div class="container py-5">
             <div class="row align-items-center">
                 <div class="col-lg-7">
-                    <video class="content-video w-100 h-100" autoplay loop muted>
+                    <video class="content-video w-100 h-100" autoplay loop muted playsinline>
                         <source src="../video/Walkthrough.mp4" type="video/mp4">
                     </video>
                 </div>
                 <div class="col-lg-5">
-                    <h5 class="text-uppercase text-primary mb-3" style="letter-spacing: 3px;">Walkthrough Video</h5>
+                    <h3 class="text-uppercase text-primary mb-3" style="letter-spacing: 2px;">Walkthrough Video</h3>
                     <h1 class="display-4 mb-3">See your <span class="text-primary">Vision</span><br>In <span class="text-primary">Motion</span> </h1>
-                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+                    <p>Our Walkthrough videos present the quality materials, intelligent layout, and overall aesthetic that will define your environment.
                     <br>
-                    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
+                    <br>
+                    Observe the considered use of textures, the warmth of natural stone, the sophistication of polished metal, the comfort of luxurious fabrics, all expertly rendered to evoke a sense of premium quality and refined elegance. The careful placement of furniture and accessories highlights the design's functionality and flow, creating a space that is both beautiful and practical.
+                    <br>
+                    <br>
+                    Beyond the visual elements, the rendering communicates a commitment to sophisticated design and a thoughtful approach to creating an environment that enhances productivity, relaxation, or lifestyle. It’s a detailed preview that allows you to fully appreciate the design's impact and quality.
                     </p>
                 </div>
             </div>
@@ -135,16 +148,17 @@
         <div class="container py-5">
             <div class="row align-items-center">
                 <div class="col-lg-5">
-                    <h5 class="text-uppercase text-primary mb-3" style="letter-spacing: 3px;">Location A/V</h5>
+                    <h3 class="text-uppercase text-primary mb-3" style="letter-spacing: 2px;">Location A/V</h3>
                     <h1 class="display-4 mb-3">Highlight the <span class="text-primary">Unique</span> Selling Points of your <span class="text-primary">Project</span> </h1>
-                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+                    <p>Location AV transcends traditional renderings. It unveils your property within its true context. We don't just show you the building, we reveal how it will integrate seamlessly with its surroundings. Utilizing advanced visualization technology, we seamlessly overlay a realistic depiction of the landscape, topography, and key features. Showcasing the natural beauty and urban context that define your location.
                     <br>
-                    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
+                    <br>
+                    Observe the interplay of light and shadow across the terrain, the effect of neighboring structures, and the flow of traffic, all rendered with exceptional accuracy. Location AV provides a comprehensive understanding of the property’s context, allowing you to appreciate its strategic advantages, neighborhood character, and potential. See how sunlight will bathe the facade at different times of day, and envision the views available from key vantage points.
                     </p>
                 </div>
                 <div class="col-lg-7">
-                    <video class="content-video w-100 h-100" autoplay loop muted>
-                        <source src="../video/signia_2.mp4" type="video/mp4">
+                    <video class="content-video w-100 h-100" autoplay loop muted playsinline>
+                        <source src="../video/locationav.mp4" type="video/mp4">
                     </video>
                 </div>
             </div>
@@ -168,7 +182,7 @@
     <div class="container-fluid py-5" id="contact">
         <div class="container py-5">
             <div class="section-title position-relative text-center">
-                <h5 class="text-uppercase text-primary mb-3" style="letter-spacing: 3px;">Contact</h5>
+                <h3 class="text-uppercase text-primary mb-3" style="letter-spacing: 2px;">Contact</h3>
                 <h1 class="font-secondary display-4">Get In Touch</h1>
             </div>
             <div class="row justify-content-center">
