--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <div class="navbar-nav ml-auto py-0">
                 <a href="#home" class="nav-item nav-link active">Home</a>
                 <a href="#service" class="nav-item nav-link">Services</a>
-                <a href="#project" class="nav-item nav-link">Project</a>
+                <a href="#project" class="nav-item nav-link">Projects</a>
                 <a href="#about" class="nav-item nav-link">About</a>
                 <a href="#contact" class="nav-item nav-link">Contact</a>
             </div>
@@ -55,7 +55,7 @@
     <div class="container-fluid p-0 mb-5" id="home">
         <div id="header-carousel" class="carousel slide" data-ride="carousel">
             <div class="carousel-inner">
-                <video class="position-absolute w-100 h-100" autoplay loop muted>
+                <video class="position-absolute w-100 h-100" autoplay loop muted playsinline>
                     <source src="video/home-video.mp4" type="video/mp4">
                 </video>
                 <div class="carousel-item position-relative active" style="height: 100vh; min-height: 400px;">
@@ -69,7 +69,7 @@
                <!--  <div class="carousel-item position-relative" style="height: 100vh; min-height: 400px;">
                     <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
                         <div class="p-3" style="max-width: 900px;">
-                            <h3 class="text-white text-uppercase mb-4" style="letter-spacing: 3px;">Tech Triq</h3>
+                            <h3 class="text-white text-uppercase mb-4" style="letter-spacing: 2px;">Tech Triq</h3>
                             <h3 class="display-3 font-secondary text-white mb-4">Bringing Properties to Life with Interactive Real Estate Experiences</h3>
                             <a class="btn btn-light font-weight-bold py-3 px-5 mt-2 btn-scroll" href="#contact">Get A Quote</a>
                         </div>
@@ -100,13 +100,13 @@
                     <iframe class="img-fluid fluid-frame mb-4 mb-lg-0" width="100%" height="100%" frameborder="0" src="/little-planet"></iframe>
                 </div>
                 <div class="col-lg-7">
-                    <h5 class="text-uppercase text-primary mb-3" style="letter-spacing: 3px;">Unlock the World – Virtually</h5>
+                    <h3 class="text-uppercase text-primary mb-3" style="letter-spacing: 2px;">Unlock the World – Virtually</h3>
                     <h1 class="display-4 mb-3">One stop solution to create <span class="text-primary">Immersive Experiences</span> for your Product</h1>
                     <p>At Tech-Triq, we transform spaces into immersive experiences through cutting-edge virtual tour technology. We don't just create tours; we craft engaging, interactive journeys that allow your audience to explore properties, venues, and destinations like never before.</p>
-                    <h3 class="text-uppercase text-primary mb-3">Why work with us?</h3>
+                    <h4 class="text-uppercase text-primary mb-3">Why work with us?</h4>
                     <ul>
                         <li>
-                            <span class="text-bullet">High-Resolution 360°° Virtual Tours: </span>Capture every detail with state-of-the-art equipment and expert photography
+                            <span class="text-bullet">High-Resolution 360° Virtual Tours: </span>Capture every detail with state-of-the-art equipment and expert photography
                         </li>
                         <li>
                             <span class="text-bullet">Interactive Elements: </span>Enrich your Tour with Interactive Hotspots, Multimedia elements
@@ -133,7 +133,7 @@
     <div class="container-fluid py-5" id="service">
         <div class="container py-5">
             <div class="section-title position-relative text-center">
-                <h5 class="text-uppercase text-primary mb-3" style="letter-spacing: 3px;">Services</h5>
+                <h3 class="text-uppercase text-primary mb-3" style="letter-spacing: 2px;">Services</h3>
                 <h1 class="font-secondary display-4">Our Primary Services Include</h1>
             </div>
             <div class="row">
@@ -198,7 +198,7 @@
     <!-- Gallery Start -->
     <div class="container-fluid bg-gallery" id="project" style="padding: 120px 0; margin: 90px 0;">
         <div class="section-title position-relative text-center" style="margin-bottom: 120px;">
-            <h5 class="text-uppercase text-primary mb-3" style="letter-spacing: 3px;">Our Recent Projects</h5>
+            <h3 class="text-uppercase text-primary mb-3" style="letter-spacing: 2px;">Our Recent Projects</h3>
             <h1 class="font-secondary display-4 text-white">Experience it yourself</h1>
         </div>
         <div class="owl-carousel gallery-carousel">
@@ -260,7 +260,7 @@
     <div class="container-fluid py-5" id="testimonial">
         <div class="container py-5">
             <div class="section-title position-relative text-center" style="margin-bottom: 120px;">
-                <h5 class="text-uppercase text-primary mb-3" style="letter-spacing: 3px;">Testimonial</h5>
+                <h3 class="text-uppercase text-primary mb-3" style="letter-spacing: 2px;">Testimonial</h3>
                 <h1 class="display-4">Our Clients Say</h1>
             </div>
             <div class="row justify-content-center">
@@ -289,7 +289,7 @@
     <div class="container-fluid py-5" id="contact">
         <div class="container py-5">
             <div class="section-title position-relative text-center">
-                <h5 class="text-uppercase text-primary mb-3" style="letter-spacing: 3px;">Contact</h5>
+                <h3 class="text-uppercase text-primary mb-3" style="letter-spacing: 2px;">Contact</h3>
                 <h1 class="font-secondary display-4">Get In Touch</h1>
             </div>
             <div class="row justify-content-center">
