--- a/virtual-tour/index.html
+++ b/virtual-tour/index.html
@@ -41,6 +41,7 @@
             </a>
             <div class="navbar-nav ml-auto py-0">
                 <a href="/" class="nav-item nav-link active">Home</a>
+                <a href="#service" class="nav-item nav-link">Features</a>
                 <a href="#contact" class="nav-item nav-link">Contact</a>
             </div>
         </div>
@@ -53,13 +54,13 @@
         <div id="header-carousel" class="carousel slide carousel-fade" data-ride="carousel">
             <div class="carousel-inner">
                 <div class="carousel-item position-relative active" style="height: 100vh; min-height: 400px;">
-                    <!-- <video class="position-absolute w-100 h-100" autoplay loop muted>
+                    <!-- <video class="position-absolute w-100 h-100" autoplay loop muted playsinline>
                         <source src="../video/signia_2bhk.mp4" type="video/mp4">
                     </video> -->
                     <iframe class="position-absolute" src="//storage.net-fs.com/hosting/8311954/3/" name="Drone Sample" width="100%" height="100%" frameborder="0" allow="fullscreen; accelerometer; gyroscope; magnetometer; vr; xr; xr-spatial-tracking; autoplay; camera; microphone" allowfullscreen="true" webkitallowfullscreen="true" mozallowfullscreen="true" oallowfullscreen="true" msallowfullscreen="true"></iframe>
                     <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
                         <div class="p-3" style="max-width: 1200px;">
-                            <h4 class="text-white text-uppercase mb-4" style="letter-spacing: 3px;">Interactive Virtual Tour</h4>
+                            <h4 class="text-white text-uppercase mb-4" style="letter-spacing: 2px;">Interactive Virtual Tour</h4>
                             <h3 class="display-3 font-secondary text-white mb-4">Present • Engage • Sell</h3>
                             <a class="btn btn-light font-weight-bold py-3 px-5 mt-2 btn-scroll" href="#contact">Get A Quote</a>
                         </div>
@@ -76,17 +77,14 @@
         <div class="container py-5">
             <div class="row align-items-center">
                 <div class="col-lg-7">
-                    <video class="content-video w-100 h-100" autoplay loop muted>
+                    <video class="content-video w-100 h-100" autoplay loop muted playsinline>
                         <source src="../video/ambit-2bhk.mp4" type="video/mp4">
                     </video>
                 </div>
                 <div class="col-lg-5">
-                    <h5 class="text-uppercase text-primary mb-3" style="letter-spacing: 3px;">Interactive 360 Virtual Tour</h5>
+                    <h3 class="text-uppercase text-primary mb-3" style="letter-spacing: 2px;">Interactive 360 Virtual Tour</h3>
                     <h1 class="display-4 mb-3">Give your Buyers an <span class="text-primary">Unforgettable First Impression</span></h1>
-                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
-                    <br>
-                    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
-                    </p>
+                    <p>Forget the frustrating limitations of a traditional viewing – an interactive virtual tour grants prospective buyers a truly remarkable sense of control. They aren’t passively observing; they’re the explorers, charting their own course through the space. They can linger over intricate details, zoom in on architectural flourishes, and meticulously examine every element at their own pace. No rushed appointments, no awkward silences – just the freedom to investigate every corner and truly understand the scale, the flow, and the potential of the property. It's about empowering the buyer to take the lead, fostering a feeling of confidence and ultimately, transforming a viewing into a deeply personal and deliberate experience.</p>
                     <a class="btn btn-primary font-weight-bold btn-scroll py-3 px-5 mt-2" type="button" href="#service">Explore Features</a>
                 </div>
             </div>
@@ -97,12 +95,61 @@
         <div class="container py-5">
             <div class="row align-items-center">
                 <div class="col-lg-5">
-                    <h5 class="text-uppercase text-primary mb-3" style="letter-spacing: 3px;">Interactive 360 Virtual Tour</h5>
-                    <h1 class="display-4 mb-3">Easy to <span class="text-primary">Share</span></h1>
-                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+                    <h3 class="text-uppercase text-primary mb-3" style="letter-spacing: 2px;">Engaging Property Presentation</h3>
+                    <h1 class="display-4 mb-3">Immersive Complete <span class="text-primary">Interactive</span></h1>
+                    <p>Transforming property presentations with a 360 virtual tour elevates the experience from static images to an immersive journey. Viewers aren’t just <span class="text-primary">seeing</span> a property; they’re virtually <span class="text-primary">walking</span> through it, exploring every nook and cranny at their own pace</p>
+                    <ul>
+                        <li>
+                            <span class="text-bullet">Full Panoramic View: </span>A 360 tour captures a *complete* 360-degree view of the space, allowing you to see everything without moving your head
+                        </li>
+                        <li>
+                            <span class="text-bullet">High-Resolution Detail: </span>While the camera still has a resolution limit, 360 tours typically use high-resolution cameras, maximizing the amount of detail that can be captured
+                        </li>
+                        <li>
+                            <span class="text-bullet">Interactive Navigation: </span>You can literally "look around" the room – moving your gaze to explore every corner and feature
+                        </li>
+                        <li>
+                            <span class="text-bullet">Layered Information (Hotspots): </span>Crucially, you can add interactive hotspots that layer in additional information – floor plans, dimensions, details about appliances, etc. – enhancing the level of detail <span class="text-primary">immensely</span>
+                        </li>
+                    </ul>
+                    <p>360 virtual tours aren’t just a technological advancement – they’re a fundamental shift in how properties are presented and experienced</p>
                 </div>
                 <div class="col-lg-7">
-                    <video class="content-video w-100 h-100" autoplay loop muted>
+                    <video class="content-video w-100 h-100" autoplay loop muted playsinline>
+                        <source src="../video/ambit-2bhk.mp4" type="video/mp4">
+                    </video>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="container-fluid py-5" id="about">
+        <div class="container py-5">
+            <div class="row align-items-center">
+                <div class="col-lg-7">
+                    <video class="content-video w-100 h-100" autoplay loop muted playsinline>
+                        <source src="../video/ambit-2bhk.mp4" type="video/mp4">
+                    </video>
+                </div>
+                <div class="col-lg-5">
+                    <h3 class="text-uppercase text-primary mb-3" style="letter-spacing: 2px;">Interactive 360 Virtual Tour</h3>
+                    <h1 class="display-4 mb-3">Easy to <span class="text-primary">Navigate</span></h1>
+                    <p>Step inside a world of effortless exploration. Our interactive virtual tours are designed for seamless navigation, allowing you to effortlessly <span class="text-primary">walk</span> through every room, pause, rewind, and re-examine any detail at your own pace. With intuitive controls and a clear, uncluttered interface, you’ll never feel lost or overwhelmed. Simply guide your gaze, click to explore, and discover the full potential of the property, it’s touring made easy</p>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="container-fluid py-5" id="about">
+        <div class="container py-5">
+            <div class="row align-items-center">
+                <div class="col-lg-5">
+                    <h3 class="text-uppercase text-primary mb-3" style="letter-spacing: 2px;">Easy to Share</h3>
+                    <h1 class="display-4 mb-3">Increased <span class="text-primary">Marketing Opportunities</span></h1>
+                    <p>Beyond the immersive experience, our virtual tours unlock a powerful marketing advantage. With a simple web link, you can instantly share the tour with your network, clients, colleagues, and potential buyers, eliminating the need for cumbersome email attachments or lengthy video uploads. This frictionless sharing dramatically increases visibility, expands your reach, and transforms your property listing into a dynamic, easily-distributable asset, fueling a vibrant wave of interest and accelerating the sales process</p>
+                </div>
+                <div class="col-lg-7">
+                    <video class="content-video w-100 h-100" autoplay loop muted playsinline>
                         <source src="../video/easy-share.mp4" type="video/mp4">
                     </video>
                 </div>
@@ -116,8 +163,8 @@
     <div class="container-fluid py-5" id="service">
         <div class="container py-5">
             <div class="section-title position-relative text-center">
-                <h5 class="text-uppercase text-primary mb-3" style="letter-spacing: 3px;">Features</h5>
-                <h1 class="font-secondary display-4">Various Features</h1>
+                <h3 class="text-uppercase text-primary mb-3" style="letter-spacing: 2px;">Features</h3>
+                <h1 class="font-secondary display-4">The Difference is in the Details</h1>
             </div>
             <div class="row">
                 <div class="col-lg-3 mb-3">
@@ -245,7 +292,7 @@
     <div class="container-fluid py-5" id="contact">
         <div class="container py-5">
             <div class="section-title position-relative text-center">
-                <h5 class="text-uppercase text-primary mb-3" style="letter-spacing: 3px;">Contact</h5>
+                <h3 class="text-uppercase text-primary mb-3" style="letter-spacing: 2px;">Contact</h3>
                 <h1 class="font-secondary display-4">Get In Touch</h1>
             </div>
             <div class="row justify-content-center">
