--- a/virtual-tour/index.html
+++ b/virtual-tour/index.html
@@ -5,8 +5,8 @@
     <meta charset="utf-8">
     <title>Tech Triq - Virtual Tour Company</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <meta content="Free HTML Templates" name="keywords">
-    <meta content="Free HTML Templates" name="description">
+    <meta content="Virtual Tour Company" name="keywords">
+    <meta content="Virtual Tour Company" name="description">
 
     <!-- Favicon -->
     <link href="../img/favicon.ico" rel="icon">
