change ids in 3d service page

--- a/3d-cad-services/index.html
+++ b/3d-cad-services/index.html
@@ -41,7 +41,10 @@
             </a>
             <div class="navbar-nav ml-auto py-0">
                 <a href="/" class="nav-item nav-link active">Home</a>
-                <a href="#service" class="nav-item nav-link">Features</a>
+                <a href="#interior" class="nav-item nav-link">Interior</a>
+                <a href="#exterior" class="nav-item nav-link">Exterior</a>
+                <a href="#walkthrough" class="nav-item nav-link">Walkthrough</a>
+                <a href="#locationav" class="nav-item nav-link">Location A/V</a>
                 <a href="#contact" class="nav-item nav-link">Contact</a>
             </div>
         </div>
@@ -72,7 +75,7 @@
 
 
     <!-- About Start -->
-    <div class="container-fluid py-5" id="about">
+    <div class="container-fluid py-5" id="interior">
         <div class="container py-5">
             <div class="row align-items-center">
                 <div class="col-lg-7">
@@ -96,7 +99,7 @@
         </div>
     </div>
 
-    <div class="container-fluid py-5" id="about">
+    <div class="container-fluid py-5" id="exterior">
         <div class="container py-5">
             <div class="row align-items-center">
                 <div class="col-lg-5">
@@ -120,7 +123,7 @@
         </div>
     </div>
 
-    <div class="container-fluid py-5" id="about">
+    <div class="container-fluid py-5" id="walkthrough">
         <div class="container py-5">
             <div class="row align-items-center">
                 <div class="col-lg-7">
@@ -144,7 +147,7 @@
         </div>
     </div>
 
-    <div class="container-fluid py-5" id="about">
+    <div class="container-fluid py-5" id="locationav">
         <div class="container py-5">
             <div class="row align-items-center">
                 <div class="col-lg-5">
